fix: moved padding-top from accordion to l-site-container as it was overflowing at the bottom

--- a/app/scss/_accordion.scss
+++ b/app/scss/_accordion.scss
@@ -4,7 +4,6 @@
   box-shadow: rem(0px) rem(50px) rem(50px) rem(-20px) rgba(53, 18, 122, 0.497159);
   border-radius: rem(23px);
   position: relative;
-  margin-top: rem(148px);
   background-image: url("/images/bg-pattern-mobile.svg");
   background-repeat: no-repeat;
   background-position: top center;
