--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -1,5 +1,6 @@
 .l {
   &-site-container {
     margin: 0 6.4%;
+    padding-top: rem(148px);
   }
 }
